--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -5,22 +5,7 @@
   <h1>Страница избранных авторов</h1>
   {% include 'posts/includes/switcher.html' %}
   {% for post in page_obj %}
-    <article>
-      <ul>
-        <li>
-          Автор: {{ post.author.get_full_name }}
-          <a href="{% url 'posts:profile' post.author.username %}">все посты пользователя</a>
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-        <img class="card-img my-2" src="{{ im.url }}">
-      {% endthumbnail %}
-      <p>{{ post.text|linebreaksbr }}</p>
-      <a href="{% url 'posts:post_detail' post.id %}">подробная информация</a>
-    </article>
+  {% include 'posts/includes/post_list.html' with author_link=True %}
     {% if post.group %}   
       <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы</a>
     {% endif %} 
