--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -24,19 +24,8 @@
         </a>
     {% endif %}
     </div>
-    <article>   
     {% for post in page_obj %}
-      <ul>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-        <img class="card-img my-2" src="{{ im.url }}">
-      {% endthumbnail %}
-      <p>{{ post.text|linebreaksbr }}</p>
-      <a href="{% url 'posts:post_detail' post.id %}">подробная информация</a>
-    </article>     
+    {% include 'posts/includes/post_list.html' %}
       {% if post.group %}   
         <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы</a>
       {% endif %}
